--- a/app/index.html
+++ b/app/index.html
@@ -205,7 +205,7 @@
           </div>
        </div>
       <!-- build:js assets/scripts/app.js-->
-      <script src="temp/scripts/app.js"></script>
+      <script src="/temp/scripts/app.js"></script>
       <!-- endbuild-->
 
 </body>
